--- a/Prog2Bpartone/wwwroot/css/site.css
+++ b/Prog2Bpartone/wwwroot/css/site.css
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-    background-color: mediumpurple;
+    background-color: skyblue;
     background-image: url("/images/Screenshot 2025-09-13 202117.png");
     background-size: cover;
     background-position: center;
